QE-1207 fix: spacing for h1 with promo font

--- a/wp-content/themes/quarkexpeditions/src/front-end/components/search-hero/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/search-hero/style.scss
@@ -118,6 +118,14 @@
 
 	&__title {
 		margin-bottom: 0;
+
+		&.font-family--promo {
+			line-height: 38px;
+
+			@media screen and (min-width: calc(grid-size(lg) + 1px)) {
+				line-height: 52px;
+			}
+		}
 	}
 
 	&__sub-title {
